deploy/metrics/podinfo-lb-svc2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-lb
  namespace: dev2
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: metrics
