deploy/metrics/podinfo-svc2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics
  namespace: dev2
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: metrics
