deploy/metrics/podinfo-ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  creationTimestamp: null
  name: metrics
  namespace: dev2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: metrics
          servicePort: 3000
        path: /
status:
  loadBalancer: {}
